--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     
 }
 .main-content::-webkit-scrollbar {
-  width: 6px;
+  width: 0px;
   
 }
 .main-content::-webkit-scrollbar-thumb {
@@ -47,6 +47,7 @@ overflow: auto;
     border-radius: 1rem;
     margin: .8rem 0.1rem 0.5rem .1rem;
     overflow: auto;
+    
 }
 .music-player{
     background-color: #000000;
@@ -342,6 +343,54 @@ a{
     .music-player .right {
         display: none;
     }
+    .main-content .right button{
+        display: none;
+    }
+    .fa-user{
+        padding-left: 9px;
+    }
+    .sticky-nav .left{
+        display: none;
+    }
+    .sticky-nav{
+        height: 3rem;
+    }
+    .top-content .top-buttons{
+        position: fixed;
+        z-index: 10;
+        margin: 0;
+        top: 18px;
+
+    }
+    .top-content .top-buttons .butn{
+        margin-left: 5px;
+    }
+    .main-content .top-content{
+        padding: 2px;
+    }
+     .top-content .bottom-content{
+        margin: 10px;
+        padding: 0px;
+
+     }
+      .top-content .bottom-content .cont-box{
+        width:185px;
+      }
+    .main-content .music-player .right {
+        display: none;
+    } 
+    .main-content .music-player .left .icon {
+        display: none;
+    }  
+    .main-content .music-player .left .img-text{
+        margin-left: 50px;
+    }
+    .middle .playback-bar{
+        display: none;
+    }
+    .middle .player-controls{
+        margin-right: 85px;
+    }
 }
 @media (max-width: 820px){
     .bottom-content .cont-box p{
@@ -390,6 +439,7 @@ a{
 
 .bottom-content{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin-left: 2.3rem;
 }
